[package]
name = "superdev-assignment"
version = "0.1.0"
edition = "2024"
[dependencies]
# Axum & web
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
bs58 = "0.5"
thiserror = "1"

# Solana & token ecosystem
solana-program = "1.18.11"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

# Compatible signature library
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["serde"] }

# This is the required dependency for Solana 1.18.x

curve25519-dalek = "3.2.1"
hyper = "1.6.0"
rand_core = "0.6.4"

getrandom = "0.2"
rand = "0.9.1"
